# star-wars-name-generator-uvx

./: .gitignore  10koutput.txt  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  FEATURES.md  LICENSE  QUICK_START.md  README.md  UV_ADVANCED_GUIDE.md  UV_GUIDE.md  dev.sh  final_test.sh  original-convo-starwars-complete.md  pyproject.toml  todo-list.tasks.md
docs/: EDGE_CASES.md  JEDI_TRAINING.md  MISSION_BRIEFINGS.md  PITFALLS.md  PUBLISHING_GUIDE.md  TROUBLESHOOTING_GUIDE.md
examples/: basic_usage.sh  docker_integration.sh  python_usage.py
plans/: 00-master-plan.md  01-technical-spec.md  02-implementation-guide.md  03-testing-strategy.md  04-deployment-guide.md
src/starwars_namegen/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py
tutorials/: getting-started.md
