[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starwars-namegen"
version = "0.3.0"
description = "Generate Star Wars-themed multi-word names for servers, instances, and resources"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jeremy Sarda", email = "jeremy@hackur.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["star-wars", "name-generator", "cli", "naming", "devops"]
dependencies = [
    "click>=8.0.0",
    "inflect>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://gitlab.com/hackur/starwars-namegen"
Documentation = "https://gitlab.com/hackur/starwars-namegen#readme"
Repository = "https://gitlab.com/hackur/starwars-namegen"
Issues = "https://gitlab.com/hackur/starwars-namegen/-/issues"

[project.scripts]
starwars-namegen = "starwars_namegen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/starwars_namegen"]

[tool.uv]
managed = true
dev-dependencies = []
